--- a/bootstrap-sandbox-start/01-containers.html
+++ b/bootstrap-sandbox-start/01-containers.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./assets/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="../assets/css/bootstrap.min.css" />
 
     <title>Bootstrap Sandbox | Containers</title>
   </head>
@@ -81,6 +81,6 @@
       </p>
     </div>
 
-    <script src="./assets/js/bootstrap.bundle.min.js"></script>
+    <script src="../assets/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
