--- a/bootstrap-sandbox-start/22-accordion-collapse.html
+++ b/bootstrap-sandbox-start/22-accordion-collapse.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./assets/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="../assets/css/bootstrap.min.css" />
     <title>Bootstrap Sandbox | Accordion & Collapse</title>
   </head>
   <body>
@@ -21,6 +21,6 @@
     </div>
     <div style="margin-top: 350px"></div>
 
-    <script src="./assets/js/bootstrap.bundle.min.js"></script>
+    <script src="../assets/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
