Update bootstrap-sandbox-start/06-sizing-borders-shadows.html file

--- a/bootstrap-sandbox-start/05-spacing.html
+++ b/bootstrap-sandbox-start/05-spacing.html
@@ -72,62 +72,62 @@
       <div class="text-bg-warning w-50 me-auto">Lorem, ipsum dolor.</div>
 
       <!-- Padding All -->
-      <div class="text-bg-dark my-2">Lorem, ipsum dolor.</div>
-      <div class="text-bg-dark my-2">Lorem, ipsum dolor.</div>
-      <div class="text-bg-dark my-2">Lorem, ipsum dolor.</div>
-      <div class="text-bg-dark my-2">Lorem, ipsum dolor.</div>
-      <div class="text-bg-dark my-2">Lorem, ipsum dolor.</div>
+      <div class="text-bg-dark my-2 p-1">Lorem, ipsum dolor.</div>
+      <div class="text-bg-dark my-2 p-2">Lorem, ipsum dolor.</div>
+      <div class="text-bg-dark my-2 p-3">Lorem, ipsum dolor.</div>
+      <div class="text-bg-dark my-2 p-4">Lorem, ipsum dolor.</div>
+      <div class="text-bg-dark my-2 p-5">Lorem, ipsum dolor.</div>
 
       <!-- Padding Top & Bottom -->
-      <div class="text-bg-success my-2">Lorem, ipsum dolor.</div>
-      <div class="text-bg-success my-2">Lorem, ipsum dolor.</div>
-      <div class="text-bg-success my-2">Lorem, ipsum dolor.</div>
-      <div class="text-bg-success my-2">Lorem, ipsum dolor.</div>
-      <div class="text-bg-success my-2">Lorem, ipsum dolor.</div>
+      <div class="text-bg-success my-2 py-1">Lorem, ipsum dolor.</div>
+      <div class="text-bg-success my-2 py-2">Lorem, ipsum dolor.</div>
+      <div class="text-bg-success my-2 py-3">Lorem, ipsum dolor.</div>
+      <div class="text-bg-success my-2 py-4">Lorem, ipsum dolor.</div>
+      <div class="text-bg-success my-2 py-5">Lorem, ipsum dolor.</div>
 
       <!-- Padding Left & Right -->
-      <div class="text-bg-danger my-2">Lorem, ipsum dolor.</div>
-      <div class="text-bg-danger my-2">Lorem, ipsum dolor.</div>
-      <div class="text-bg-danger my-2">Lorem, ipsum dolor.</div>
-      <div class="text-bg-danger my-2">Lorem, ipsum dolor.</div>
-      <div class="text-bg-danger my-2">Lorem, ipsum dolor.</div>
+      <div class="text-bg-danger my-2 px-1">Lorem, ipsum dolor.</div>
+      <div class="text-bg-danger my-2 px-2">Lorem, ipsum dolor.</div>
+      <div class="text-bg-danger my-2 px-3">Lorem, ipsum dolor.</div>
+      <div class="text-bg-danger my-2 px-4">Lorem, ipsum dolor.</div>
+      <div class="text-bg-danger my-2 px-5">Lorem, ipsum dolor.</div>
 
       <!-- Padding Top -->
-      <div class="text-bg-info my-2">Lorem, ipsum dolor.</div>
-      <div class="text-bg-info my-2">Lorem, ipsum dolor.</div>
-      <div class="text-bg-info my-2">Lorem, ipsum dolor.</div>
-      <div class="text-bg-info my-2">Lorem, ipsum dolor.</div>
-      <div class="text-bg-info my-2">Lorem, ipsum dolor.</div>
+      <div class="text-bg-info my-2 pt-1">Lorem, ipsum dolor.</div>
+      <div class="text-bg-info my-2 pt-2">Lorem, ipsum dolor.</div>
+      <div class="text-bg-info my-2 pt-3">Lorem, ipsum dolor.</div>
+      <div class="text-bg-info my-2 pt-4">Lorem, ipsum dolor.</div>
+      <div class="text-bg-info my-2 pt-5">Lorem, ipsum dolor.</div>
 
       <!-- Padding Bottom -->
-      <div class="text-bg-warning my-2">Lorem, ipsum dolor.</div>
-      <div class="text-bg-warning my-2">Lorem, ipsum dolor.</div>
-      <div class="text-bg-warning my-2">Lorem, ipsum dolor.</div>
-      <div class="text-bg-warning my-2">Lorem, ipsum dolor.</div>
-      <div class="text-bg-warning my-2">Lorem, ipsum dolor.</div>
+      <div class="text-bg-warning my-2 pb-1">Lorem, ipsum dolor.</div>
+      <div class="text-bg-warning my-2 pb-2">Lorem, ipsum dolor.</div>
+      <div class="text-bg-warning my-2 pb-3">Lorem, ipsum dolor.</div>
+      <div class="text-bg-warning my-2 pb-4">Lorem, ipsum dolor.</div>
+      <div class="text-bg-warning my-2 pb-5">Lorem, ipsum dolor.</div>
 
       <!-- Padding Left/Start -->
-      <div class="text-bg-primary my-2">Lorem, ipsum dolor.</div>
-      <div class="text-bg-primary my-2">Lorem, ipsum dolor.</div>
-      <div class="text-bg-primary my-2">Lorem, ipsum dolor.</div>
-      <div class="text-bg-primary my-2">Lorem, ipsum dolor.</div>
-      <div class="text-bg-primary my-2">Lorem, ipsum dolor.</div>
+      <div class="text-bg-primary my-2 ps-1">Lorem, ipsum dolor.</div>
+      <div class="text-bg-primary my-2 ps-2">Lorem, ipsum dolor.</div>
+      <div class="text-bg-primary my-2 ps-3">Lorem, ipsum dolor.</div>
+      <div class="text-bg-primary my-2 ps-4">Lorem, ipsum dolor.</div>
+      <div class="text-bg-primary my-2 ps-5">Lorem, ipsum dolor.</div>
 
       <!-- Padding Right/End -->
-      <div class="text-bg-primary my-2">Lorem, ipsum dolor.</div>
-      <div class="text-bg-primary my-2">Lorem, ipsum dolor.</div>
-      <div class="text-bg-primary my-2">Lorem, ipsum dolor.</div>
-      <div class="text-bg-primary my-2">Lorem, ipsum dolor.</div>
-      <div class="text-bg-primary my-2">Lorem, ipsum dolor.</div>
+      <div class="text-bg-primary my-2 pe-1 text-end">Lorem, ipsum dolor.</div>
+      <div class="text-bg-primary my-2 pe-2 text-end">Lorem, ipsum dolor.</div>
+      <div class="text-bg-primary my-2 pe-3 text-end">Lorem, ipsum dolor.</div>
+      <div class="text-bg-primary my-2 pe-4 text-end">Lorem, ipsum dolor.</div>
+      <div class="text-bg-primary my-2 pe-5 text-end">Lorem, ipsum dolor.</div>
 
       <!-- Stacks -->
-      <div class="">
+      <div class="vstack gap-3">
         <div class="p-2 bg-info">First item</div>
         <div class="p-2 bg-info">Second item</div>
         <div class="p-2 bg-info">Third item</div>
       </div>
 
-      <div class="">
+      <div class="hstack gap-5">
         <div class="p-2 text-bg-success">First item</div>
         <div class="p-2 text-bg-success">Second item</div>
         <div class="p-2 text-bg-success">Third item</div>
