Update bootstrap-sandbox-start/07-breakpoints.html file

--- a/bootstrap-sandbox-start/07-breakpoints.html
+++ b/bootstrap-sandbox-start/07-breakpoints.html
@@ -12,14 +12,38 @@
       }
 
       /* `sm` applies to x-small devices (portrait phones, less than 576px) */
+      @media (min-width: 567px) {
+        body {
+          background: blue;
+        }
+      }
 
       /* `md` applies to small devices (landscape phones, less than 768px) */
 
+      @media (min-width: 767px) {
+        body {
+          background: green;
+        }
+      }
       /* `lg` applies to medium devices (tablets, less than 992px) */
 
+      @media (min-width: 991px) {
+        body {
+          background: yellow;
+        }
+      }
       /* `xl` applies to large devices (desktops, less than 1200px) */
-
+      @media (min-width: 1199px) {
+        body {
+          background: orange;
+        }
+      }
       /* `xxl` applies to x-large devices (large desktops, less than 1400px) */
+      @media (min-width: 1399px) {
+        body {
+          background: red;
+        }
+      }
     </style>
     <title>Bootstrap Sandbox | Breakpoints</title>
   </head>
