Update bootstrap-sandbox-start/09-navbar.html file

--- a/bootstrap-sandbox-start/09-navbar.html
+++ b/bootstrap-sandbox-start/09-navbar.html
@@ -11,17 +11,126 @@
     <h1 class="mb-5">Navbar</h1>
 
     <!-- Simple Navbar -->
+    <!-- navbar-expand-md means that bellow the medium screen size it will show a humburger and above the medium humburger will be gone -->
+    <nav class="navbar navbar-expand-md text-bg-success">
+      <div class="container">
+        <!-- Logo -->
+        <a href="#" class="navbar-brand">Logo</a>
+        <!-- Toggler Button -->
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+        >
+          <!-- Humburger Icon -->
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <!-- Collapse Part -->
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item">
+              <a href="#" class="nav-link active">Home</a>
+            </li>
+            <li class="nav-item">
+              <a href="#" class="nav-link">About</a>
+            </li>
+            <li class="nav-item">
+              <a href="#" class="nav-link">Services</a>
+            </li>
+            <li class="nav-item">
+              <a href="#" class="nav-link">Contact</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
 
     <br /><br />
 
     <!-- Color Variant -->
+    <nav class="navbar navbar-expand-md bg-primary navbar-dark">
+      <div class="container">
+        <!-- Logo -->
+        <a href="#" class="navbar-brand">Logo</a>
+        <!-- Toggler Button -->
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+        >
+          <!-- Humburger Icon -->
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <!-- Collapse Part -->
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item">
+              <a href="#" class="nav-link active">Home</a>
+            </li>
+            <li class="nav-item">
+              <a href="#" class="nav-link">About</a>
+            </li>
+            <li class="nav-item">
+              <a href="#" class="nav-link">Services</a>
+            </li>
+            <li class="nav-item">
+              <a href="#" class="nav-link">Contact</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
 
     <br /><br />
 
     <!-- Fixed Top -->
+    <nav class="navbar navbar-expand-md bg-dark navbar-dark fixed-top">
+      <div class="container">
+        <!-- Logo -->
+        <a href="#" class="navbar-brand">Logo</a>
+        <!-- Toggler Button -->
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+        >
+          <!-- Humburger Icon -->
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <!-- Collapse Part -->
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item">
+              <a href="#" class="nav-link active">Home</a>
+            </li>
+            <li class="nav-item">
+              <a href="#about" class="nav-link">About</a>
+            </li>
+            <li class="nav-item">
+              <a href="#" class="nav-link">Services</a>
+            </li>
+            <li class="nav-item">
+              <a href="#" class="nav-link">Contact</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
 
     <!-- Form In Navbar -->
-
+    <nav class="navbar navbar-expand-md text-bg-warning">
+      <div class="container">
+        <!-- Logo -->
+        <a href="#" class="navbar-brand">Logo</a>
+        <form class="d-flex" role="search">
+          <input type="text" class="form-control me-2" />
+          <button class="btn btn-dark">Search</button>
+        </form>
+      </div>
+    </nav>
     <br /><br />
 
     <p>
