Update bootstrap-sandbox-start/11-flexbox.html file

--- a/bootstrap-sandbox-start/11-flexbox.html
+++ b/bootstrap-sandbox-start/11-flexbox.html
@@ -12,7 +12,7 @@
       <h1 class="mb-5">Flexbox</h1>
 
       <!-- Basic Flexbox -->
-      <div class="">
+      <div class="d-flex">
         <div class="text-bg-light p-3">Flex Item</div>
         <div class="text-bg-light p-3">Flex Item</div>
         <div class="text-bg-light p-3">Flex Item</div>
@@ -24,7 +24,7 @@
       <br /><br />
 
       <!-- Flex Column -->
-      <div class="">
+      <div class="d-flex flex-column">
         <div class="text-bg-dark p-3">Flex Item</div>
         <div class="text-bg-dark p-3">Flex Item</div>
         <div class="text-bg-dark p-3">Flex Item</div>
@@ -36,7 +36,7 @@
       <br /><br />
 
       <!-- Using Screen Sizes -->
-      <div class="">
+      <div class="d-flex flex-column flex-md-row">
         <div class="text-bg-primary p-3">Flex Item</div>
         <div class="text-bg-primary p-3">Flex Item</div>
         <div class="text-bg-primary p-3">Flex Item</div>
@@ -48,7 +48,13 @@
       <br /><br />
 
       <!-- Flex Wrap -->
-      <div class="">
+      <div class="d-flex flex-wrap">
+        <div class="text-bg-success p-3">Flex Item</div>
+        <div class="text-bg-success p-3">Flex Item</div>
+        <div class="text-bg-success p-3">Flex Item</div>
+        <div class="text-bg-success p-3">Flex Item</div>
+        <div class="text-bg-success p-3">Flex Item</div>
+        <div class="text-bg-success p-3">Flex Item</div>
         <div class="text-bg-success p-3">Flex Item</div>
         <div class="text-bg-success p-3">Flex Item</div>
         <div class="text-bg-success p-3">Flex Item</div>
@@ -61,7 +67,7 @@
       <br /><br />
 
       <!-- Justify Content -->
-      <div class="">
+      <div class="d-flex justify-content-end">
         <div class="text-bg-dark p-3">Flex Item</div>
         <div class="text-bg-dark p-3">Flex Item</div>
         <div class="text-bg-dark p-3">Flex Item</div>
@@ -69,7 +75,7 @@
 
       <br /><br />
 
-      <div class="">
+      <div class="d-flex justify-content-around">
         <div class="text-bg-dark p-3">Flex Item</div>
         <div class="text-bg-dark p-3">Flex Item</div>
         <div class="text-bg-dark p-3">Flex Item</div>
@@ -77,7 +83,7 @@
 
       <br /><br />
 
-      <div class="">
+      <div class="d-flex justify-content-between">
         <div class="text-bg-dark p-3">Flex Item</div>
         <div class="text-bg-dark p-3">Flex Item</div>
         <div class="text-bg-dark p-3">Flex Item</div>
@@ -86,7 +92,15 @@
       <br /><br />
 
       <!-- Align Items -->
-      <div class="" style="height: 300px">
+      <div class="d-flex flex-column align-items-center" style="height: 300px">
+        <div class="text-bg-light p-3">Flex Item</div>
+        <div class="text-bg-light p-3">Flex Item</div>
+        <div class="text-bg-light p-3">Flex Item</div>
+      </div>
+
+      <br /><br />
+
+      <div class="d-flex flex-column align-items-end" style="height: 300px">
         <div class="text-bg-light p-3">Flex Item</div>
         <div class="text-bg-light p-3">Flex Item</div>
         <div class="text-bg-light p-3">Flex Item</div>
@@ -95,9 +109,9 @@
       <br /><br />
 
       <!-- Align Self -->
-      <div class="" style="height: 300px">
+      <div class="d-flex flex-column" style="height: 300px">
         <div class="text-bg-primary p-3">Flex Item</div>
-        <div class="text-bg-primary p-3">Flex Item</div>
+        <div class="text-bg-primary p-3 align-self-center">Flex Item</div>
         <div class="text-bg-primary p-3">Flex Item</div>
       </div>
 
@@ -105,7 +119,7 @@
 
       <!-- Flex Grow -->
       <div class="d-flex">
-        <div class="text-bg-primary p-3">Flex Item</div>
+        <div class="text-bg-primary p-3 flex-grow-1">Flex Item</div>
         <div class="text-bg-dark p-3">Flex Item</div>
         <div class="text-bg-dark p-3">Flex Item</div>
       </div>
