Update bootstrap-sandbox-start/12-cards.html file

--- a/bootstrap-sandbox-start/12-cards.html
+++ b/bootstrap-sandbox-start/12-cards.html
@@ -12,14 +12,47 @@
       <h1 class="mb-5">Cards</h1>
 
       <!-- Basic Text Card -->
+      <div class="card" style="width: 25rem">
+        <div class="card-body">
+          <h5 class="card-title">Card Title</h5>
+          <p class="card-text">
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tenetur
+            blanditiis pariatur earum, quae architecto autem debitis ratione
+            commodi ut omnis.
+          </p>
+        </div>
+      </div>
 
       <br /><br />
 
       <!-- Card With Image -->
+      <div class="card" style="width: 25rem">
+        <img src="https://picsum.photos/600" alt="pic" class="card-img-top" />
+        <div class="card-body">
+          <h5 class="card-title">Card Title</h5>
+          <p class="card-text">
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tenetur
+            blanditiis pariatur earum, quae architecto autem debitis ratione
+            commodi ut omnis.
+          </p>
+        </div>
+      </div>
 
       <br /><br />
 
       <!-- Header & Footer -->
+      <div class="card" style="width: 25rem">
+        <div class="card-header">Card Header</div>
+        <div class="card-body">
+          <h5 class="card-title">Card Title</h5>
+          <p class="card-text">
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tenetur
+            blanditiis pariatur earum, quae architecto autem debitis ratione
+            commodi ut omnis.
+          </p>
+        </div>
+        <div class="card-footer">Card Footer</div>
+      </div>
 
       <br /><br />
 
@@ -35,14 +68,114 @@
       <br /><br />
 
       <!-- Grid Columns & Colors -->
+      <div class="row">
+        <div class="col-md-3">
+          <div class="card text-bg-success">
+            <div class="card-body">
+              <h5 class="card-title">Card Title</h5>
+              <p class="card-text">
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                Tenetur blanditiis pariatur earum, quae architecto autem debitis
+                ratione commodi ut omnis.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="card text-bg-danger">
+            <div class="card-body">
+              <h5 class="card-title">Card Title</h5>
+              <p class="card-text">
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                Tenetur blanditiis pariatur earum, quae architecto autem debitis
+                ratione commodi ut omnis.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="card text-bg-dark">
+            <div class="card-body">
+              <h5 class="card-title">Card Title</h5>
+              <p class="card-text">
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                Tenetur blanditiis pariatur earum, quae architecto autem debitis
+                ratione commodi ut omnis.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="card text-bg-warning">
+            <div class="card-body">
+              <h5 class="card-title">Card Title</h5>
+              <p class="card-text">
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                Tenetur blanditiis pariatur earum, quae architecto autem debitis
+                ratione commodi ut omnis.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
 
       <br /><br />
 
       <!-- Card Group -->
+      <div class="card-group">
+        <div class="card" style="width: 25rem">
+        <img src="https://picsum.photos/600" alt="pic" class="card-img-top" />
+        <div class="card-body">
+          <h5 class="card-title">Card Title</h5>
+          <p class="card-text">
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tenetur
+            blanditiis pariatur earum, quae architecto autem debitis ratione
+            commodi ut omnis.
+          </p>
+        </div>
+      </div>
+      <div class="card" style="width: 25rem">
+        <img src="https://picsum.photos/400" alt="pic" class="card-img-top" />
+        <div class="card-body">
+          <h5 class="card-title">Card Title</h5>
+          <p class="card-text">
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tenetur
+            blanditiis pariatur earum, quae architecto autem debitis ratione
+            commodi ut omnis.
+          </p>
+        </div>
+      </div>
+      <div class="card" style="width: 25rem">
+        <img src="https://picsum.photos/500" alt="pic" class="card-img-top" />
+        <div class="card-body">
+          <h5 class="card-title">Card Title</h5>
+          <p class="card-text">
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tenetur
+            blanditiis pariatur earum, quae architecto autem debitis ratione
+            commodi ut omnis.
+          </p>
+        </div>
+      </div>
+      </div>
 
       <br /><br />
 
       <!-- Placeholders -->
+      <div class="card" style="width: 18rem;">
+        <div class="card-body">
+          <h5 class="card-title placeholder-glow">
+            <span class="placeholder col-6"></span>
+          </h5>
+          <p class="card-text placeholder-glow">
+            <span class="placeholder col-7"></span>
+            <span class="placeholder col-4"></span>
+            <span class="placeholder col-4"></span>
+            <span class="placeholder col-6"></span>
+            <span class="placeholder col-8"></span>
+          </p>
+          <a href="" class="btn btn-secondary placeholder col-6 disabled"></a>
+        </div>
+      </div>
 
       <!-- Don't go past here -->
     </div>
