--- a/bootstrap-sandbox-start/15-form-validation-display.html
+++ b/bootstrap-sandbox-start/15-form-validation-display.html
@@ -55,5 +55,16 @@
     <div style="margin-top: 350px"></div>
 
     <script src="../assets/js/bootstrap.bundle.min.js"></script>
+    <script>
+      const form = document.querySelector('.needs-validation');
+      form.addEventListener('submit', (e)=> {
+        if(!form.checkValidity()){
+          e.preventDefault()
+        }else{
+          alert("Success!");
+        }
+        form.classList.add('was-validated')
+      })
+    </script>
   </body>
 </html>
