--- a/bootstrap-sandbox-start/16-alerts-progress-bars.html
+++ b/bootstrap-sandbox-start/16-alerts-progress-bars.html
@@ -12,42 +12,91 @@
       <h1 class="mb-5">Alerts & Progress Bars</h1>
 
       <!-- Alerts -->
-      <div class="">This is a primary alert!</div>
-      <div class="">This is a secondary alert!</div>
-      <div class="">This is a success alert!</div>
-      <div class="">This is a danger alert!</div>
-      <div class="">This is a warning alert!</div>
-      <div class="">This is a info alert!</div>
-      <div class="">This is a light alert!</div>
-      <div class="">This is a dark alert!</div>
+      <div class="alert alert-primary" role="alert">
+        This is a primary alert!
+      </div>
+      <div class="alert alert-secondary" role="alert">
+        This is a secondary alert!
+      </div>
+      <div class="alert alert-success" role="alert">
+        This is a success alert!
+      </div>
+      <div class="alert alert-danger" role="alert">This is a danger alert!</div>
+      <div class="alert alert-warning" role="alert">
+        This is a warning alert!
+      </div>
+      <div class="alert alert-info" role="alert">This is a info alert!</div>
+      <div class="alert alert-light" role="alert">This is a light alert!</div>
+      <div class="alert alert-dark" role="alert">This is a dark alert!</div>
 
       <br /><br />
 
       <!-- Alert with link -->
+      <div class="alert alert-primary" role="alert">
+        This is a primary alert!
+        <a href="#" class="alert-link">Example Link</a>
+      </div>
 
       <br /><br />
 
       <!-- Additional Content -->
+      <div class="alert alert-primary" role="alert">
+        <h4 class="alert-heading">Alert Heading</h4>
+        <hr />
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam,
+          inventore.
+        </p>
+      </div>
 
       <br /><br />
 
       <!-- Dismissing -->
+      <div class="alert alert-danger alert-dismissible show fade" role="alert">
+        <button class="btn-close" data-bs-dismiss="alert"></button>
+        Something went wrong!
+      </div>
 
       <br /><br />
 
       <!-- Progress Bars -->
+      <div
+        class="progress mb-4"
+        role="progressbar"
+        aria-valuenow="25"
+        aria-valuemin="0"
+        aria-valuemax="100"
+      >
+        <div class="progress-bar" style="width: 25%"></div>
+      </div>
+
+      <br /><br />
+
+      <div class="progress mb-4" role="progressbar">
+        <div class="progress-bar bg-success" style="width: 50%"></div>
+      </div>
 
       <br /><br />
 
       <!-- Labels -->
+      <div class="progress mb-4" role="progressbar">
+        <div class="progress-bar bg-danger" style="width: 40%">40%</div>
+      </div>
+
 
       <br /><br />
 
       <!-- Stripes -->
+      <div class="progress mb-4" role="progressbar">
+        <div class="progress-bar progress-bar-striped bg-warning" style="width: 40%"></div>
+      </div>
 
       <br /><br />
 
       <!-- Animated Stripes -->
+      <div class="progress mb-4" role="progressbar">
+        <div class="progress-bar progress-bar-striped progress-bar-animated bg-dark" style="width: 40%"></div>
+      </div>
 
       <br /><br />
 
