Update bootstrap-sandbox-start/17-tables.html file

--- a/bootstrap-sandbox-start/17-tables.html
+++ b/bootstrap-sandbox-start/17-tables.html
@@ -11,7 +11,7 @@
     <div class="container">
       <h1 class="mb-5">Tables</h1>
       <!-- Basic Tables -->
-      <table>
+      <table class="table">
         <thead>
           <tr>
             <th>#</th>
@@ -45,7 +45,7 @@
       <br /><br />
 
       <!-- Variants -->
-      <table>
+      <table class="table table-dark">
         <thead>
           <tr>
             <th>#</th>
@@ -55,7 +55,7 @@
           </tr>
         </thead>
         <tbody>
-          <tr>
+          <tr class="table-danger">
             <th>1</th>
             <td>Tony Stark</td>
             <td>ironman@gmail.com</td>
@@ -64,7 +64,7 @@
           <tr>
             <th>2</th>
             <td>Steve Rogers</td>
-            <td>captain@gmail.com</td>
+            <td  class="table-warning">captain@gmail.com</td>
             <td>UI Designer</td>
           </tr>
           <tr>
@@ -79,7 +79,7 @@
       <br /><br />
 
       <!-- Striped -->
-      <table>
+      <table class="table table-striped">
         <thead>
           <tr>
             <th>#</th>
@@ -112,8 +112,9 @@
 
       <br /><br />
 
+
       <!-- Hoverable Rows -->
-      <table>
+      <table class="table table-hover">
         <thead>
           <tr>
             <th>#</th>
@@ -147,7 +148,7 @@
       <br /><br />
 
       <!-- Bordered Tables -->
-      <table>
+      <table class="table table-bordered">
         <thead>
           <tr>
             <th>#</th>
@@ -181,7 +182,7 @@
       <br /><br />
 
       <!-- Borderless Tables -->
-      <table>
+      <table class="table table-borderless">
         <thead>
           <tr>
             <th>#</th>
