--- a/bootstrap-sandbox-start/23-carousel.html
+++ b/bootstrap-sandbox-start/23-carousel.html
@@ -12,6 +12,77 @@
       <h1 class="mb-5">Carousel</h1>
 
       <!-- Carousel -->
+      <div class="carousel slide" id="slider">
+        <!-- Indicators -->
+        <div class="carousel-indicators">
+          <button
+            class="active"
+            data-bs-slide-to="0"
+            data-bs-target="#slider"
+          ></button>
+          <button data-bs-slide-to="1" data-bs-target="#slider"></button>
+          <button data-bs-slide-to="2" data-bs-target="#slider"></button>
+        </div>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img
+              src="https://images.pexels.com/photos/707344/pexels-photo-707344.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2"
+              alt="space"
+              class="d-block w-100"
+            />
+            <div
+              class="carousel-caption d-none d-md-block bg-secondary opacity-"
+            >
+              <h5>Image</h5>
+              <p>Lorem ipsum dolor sit amet.</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img
+              src="https://images.pexels.com/photos/1276518/pexels-photo-1276518.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2"
+              alt="space"
+              class="d-block w-100"
+            />
+            <div
+              class="carousel-caption d-none d-md-block bg-secondary opacity-"
+            >
+              <h5>Image</h5>
+              <p>Lorem ipsum dolor sit amet.</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img
+              src="https://images.pexels.com/photos/534164/pexels-photo-534164.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2"
+              alt="space"
+              class="d-block w-100"
+            />
+            <div
+              class="carousel-caption d-none d-md-block bg-secondary opacity-"
+            >
+              <h5>Image</h5>
+              <p>Lorem ipsum dolor sit amet.</p>
+            </div>
+          </div>
+        </div>
+        <!-- Catousel Buttons -->
+        <button
+          class="carousel-control-prev"
+          data-bs-slide="prev"
+          data-bs-target="#slider"
+        >
+          <span class="carousel-control-prev-icon"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+
+        <button
+          class="carousel-control-next"
+          data-bs-slide="next"
+          data-bs-target="#slider"
+        >
+          <span class="carousel-control-next-icon"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
 
       <!-- Don't go past here -->
     </div>
