Update bootstrap-sandbox-start/24-toasts.html file

--- a/bootstrap-sandbox-start/24-toasts.html
+++ b/bootstrap-sandbox-start/24-toasts.html
@@ -11,6 +11,14 @@
   <body>
     <div class="container">
       <h1 class="mb-5">Toasts</h1>
+      <button id="toastBtn" class="btn btn-primary">Toast Button</button>
+      <div class="toast-container position-fixed top-0 end-0 p-3">
+        <div class="toast" id="myToast">
+          <div class="toast-body text-bg-warning">
+            This is a Warning for you!
+          </div>
+        </div>
+      </div>
 
       <!-- Don't go past here -->
     </div>
